crates/anodized/tests/compile_fail/closure_form_unsupported.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/closure_form_unsupported.rs:5:14
  |
3 | / #[spec(
4 | |     // Should fail: closure-form is no longer allowed.
5 | |     ensures: |x, y| x > 0,
  | |              ^^^^^^^^^^^^ expected `bool`, found closure
6 | | )]
  | |__- expected `bool` because of return type
  |
  = note: expected type `bool`
          found closure `{closure@$DIR/tests/compile_fail/closure_form_unsupported.rs:5:14: 5:20}`
help: use parentheses to call this closure
  |
5 |     ensures: (|x, y| x > 0)(/* value */, /* value */),
  |              +            +++++++++++++++++++++++++++

error[E0308]: mismatched types
  --> tests/compile_fail/closure_form_unsupported.rs:13:14
   |
11 | / #[spec(
12 | |     // Should fail: closure-form is no longer allowed.
13 | |     ensures: || true,
   | |              ^^^^^^^ expected `bool`, found closure
14 | | )]
   | |__- expected `bool` because of return type
   |
   = note: expected type `bool`
           found closure `{closure@$DIR/tests/compile_fail/closure_form_unsupported.rs:13:14: 13:16}`
help: use parentheses to call this closure
   |
13 |     ensures: (|| true)(),
   |              +       +++
